--- a/notebooks/sagemaker-flight-delays.ipynb
+++ b/notebooks/sagemaker-flight-delays.ipynb
@@ -43,7 +43,7 @@
     "## Updating Python Dependencies\n",
     "\n",
     "The following will ensure you have versions of dependencies that are required in this lab. This command uses the Pip, the python package and dependency management tool."
-    ]
+   ]
   },
   {
    "cell_type": "code",
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "!pip install awscli==1.27.43 boto3==1.26.43 sagemaker==2.127.0 \n"
+    "!pip install awscli==1.27.43 boto3==1.26.43 sagemaker==2.127.0"
    ]
   },
   {
@@ -102,12 +102,12 @@
    "outputs": [],
    "source": [
     "with open(filepath) as file:\n",
-    "   line = file.readline()\n",
-    "   count = 1\n",
-    "   while count <= 5:\n",
-    "       print(\"Line {}: {}\".format(count, line))\n",
-    "       line = file.readline()\n",
-    "       count += 1"
+    "    line = file.readline()\n",
+    "    count = 1\n",
+    "    while count <= 5:\n",
+    "        print(\"Line {}: {}\".format(count, line))\n",
+    "        line = file.readline()\n",
+    "        count += 1"
    ]
   },
   {
@@ -131,28 +131,28 @@
     "import pandas as pd\n",
     "\n",
     "dtypes = {\n",
-    "        \"YEAR\": np.int64,\n",
-    "        \"QUARTER\": \"category\",\n",
-    "        \"MONTH\": \"category\",\n",
-    "        \"DAY_OF_MONTH\": \"category\",\n",
-    "        \"DAY_OF_WEEK\": \"category\",\n",
-    "        \"UNIQUE_CARRIER\": \"category\",\n",
-    "        \"TAIL_NUM\": \"category\",\n",
-    "        \"FL_NUM\": \"category\",\n",
-    "        \"ORIGIN\": \"category\",\n",
-    "        \"DEST\": \"category\",\n",
-    "        \"CRS_DEP_TIME\": np.int64,\n",
-    "        \"DEP_TIME\": np.int64,\n",
-    "        \"DEP_DELAY\": np.float64,\n",
-    "        \"DEP_DELAY_NEW\": np.float64,\n",
-    "        \"DEP_DEL15\": np.int64,\n",
-    "        \"DEP_DELAY_GROUP\": np.int64,\n",
-    "        \"CRS_ARR_TIME\": np.int64,\n",
-    "        \"ARR_DELAY\": np.float64,\n",
-    "        \"CRS_ELAPSED_TIME\": np.float64,\n",
-    "        \"DISTANCE\": np.float64,\n",
-    "        \"DISTANCE_GROUP\": \"category\"\n",
-    "    }"
+    "    \"YEAR\": np.int64,\n",
+    "    \"QUARTER\": \"category\",\n",
+    "    \"MONTH\": \"category\",\n",
+    "    \"DAY_OF_MONTH\": \"category\",\n",
+    "    \"DAY_OF_WEEK\": \"category\",\n",
+    "    \"UNIQUE_CARRIER\": \"category\",\n",
+    "    \"TAIL_NUM\": \"category\",\n",
+    "    \"FL_NUM\": \"category\",\n",
+    "    \"ORIGIN\": \"category\",\n",
+    "    \"DEST\": \"category\",\n",
+    "    \"CRS_DEP_TIME\": np.int64,\n",
+    "    \"DEP_TIME\": np.int64,\n",
+    "    \"DEP_DELAY\": np.float64,\n",
+    "    \"DEP_DELAY_NEW\": np.float64,\n",
+    "    \"DEP_DEL15\": np.int64,\n",
+    "    \"DEP_DELAY_GROUP\": np.int64,\n",
+    "    \"CRS_ARR_TIME\": np.int64,\n",
+    "    \"ARR_DELAY\": np.float64,\n",
+    "    \"CRS_ELAPSED_TIME\": np.float64,\n",
+    "    \"DISTANCE\": np.float64,\n",
+    "    \"DISTANCE_GROUP\": \"category\",\n",
+    "}"
    ]
   },
   {
@@ -189,20 +189,21 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
     "# Plot histogram of all arrival delays and arrival delays between -100 (100 minutes early) and 100\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(12,6))\n",
-    "fig.suptitle('Arrival Delay Histograms')\n",
-    "axes[0].hist(df['ARR_DELAY'], bins=50)\n",
-    "axes[0].set(ylabel='Frequency', xlabel='Arrival Delay (Minutes)');\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "fig.suptitle(\"Arrival Delay Histograms\")\n",
+    "axes[0].hist(df[\"ARR_DELAY\"], bins=50)\n",
+    "axes[0].set(ylabel=\"Frequency\", xlabel=\"Arrival Delay (Minutes)\")\n",
     "\n",
-    "delays_zoom = df.loc[(df['ARR_DELAY'] >= -100) & (df['ARR_DELAY'] <= 100), 'ARR_DELAY']\n",
+    "delays_zoom = df.loc[(df[\"ARR_DELAY\"] >= -100) & (df[\"ARR_DELAY\"] <= 100), \"ARR_DELAY\"]\n",
     "axes[1].hist(delays_zoom, bins=50)\n",
-    "axes[1].set(ylabel='Frequency', xlabel='Arrival Delay (Minutes)');\n",
+    "axes[1].set(ylabel=\"Frequency\", xlabel=\"Arrival Delay (Minutes)\")\n",
     "\n",
     "# Print arrival delay statistics\n",
-    "df['ARR_DELAY'].describe()"
+    "df[\"ARR_DELAY\"].describe()"
    ]
   },
   {
@@ -239,7 +240,11 @@
    "source": [
     "%%time\n",
     "\n",
-    "categoricals = [column for (column, dtype) in dtypes.items() if dtype == \"category\" and column in df.columns]\n",
+    "categoricals = [\n",
+    "    column\n",
+    "    for (column, dtype) in dtypes.items()\n",
+    "    if dtype == \"category\" and column in df.columns\n",
+    "]\n",
     "for column in categoricals:\n",
     "    df = pd.get_dummies(data=df, columns=[column])"
    ]
@@ -280,7 +285,7 @@
     "import sagemaker.amazon.common as smac\n",
     "\n",
     "# Get the available S3 bucket created by the Cloud Academy lab environment\n",
-    "bucket = boto3.client('s3').list_buckets()['Buckets'][0]['Name']\n",
+    "bucket = boto3.client(\"s3\").list_buckets()[\"Buckets\"][0][\"Name\"]\n",
     "print(bucket)"
    ]
   },
@@ -308,13 +313,15 @@
     "df = df[columns]\n",
     "\n",
     "# Split data into training and test sets (60%/40% deterministic split)\n",
-    "train = df.sample(frac=0.6, random_state=1) # fix random_state for consistent results\n",
+    "train = df.sample(frac=0.6, random_state=1)  # fix random_state for consistent results\n",
     "test = df.drop(train.index)\n",
     "del df\n",
     "\n",
     "# Write CSV files\n",
-    "train.to_csv(path_or_buf='train.csv', header=False, index=False) # don't write header or row indexes (index=False)\n",
-    "test.to_csv(path_or_buf='test.csv', header=False, index=False)"
+    "train.to_csv(\n",
+    "    path_or_buf=\"train.csv\", header=False, index=False\n",
+    ")  # don't write header or row indexes (index=False)\n",
+    "test.to_csv(path_or_buf=\"test.csv\", header=False, index=False)"
    ]
   },
   {
@@ -334,17 +341,21 @@
     "\n",
     "import os\n",
     "\n",
-    "prefix = 'FlightDelays'\n",
-    "key = 'csv-data'\n",
+    "prefix = \"FlightDelays\"\n",
+    "key = \"csv-data\"\n",
     "\n",
     "# Upload data to S3\n",
-    "boto3.resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train', key)).upload_file('train.csv', ExtraArgs={'ContentType': 'text/csv'})\n",
-    "s3_train_data = 's3://{}/{}/train/{}'.format(bucket, prefix, key)\n",
-    "print('uploaded training data location: {}'.format(s3_train_data))\n",
+    "boto3.resource(\"s3\").Bucket(bucket).Object(\n",
+    "    os.path.join(prefix, \"train\", key)\n",
+    ").upload_file(\"train.csv\", ExtraArgs={\"ContentType\": \"text/csv\"})\n",
+    "s3_train_data = \"s3://{}/{}/train/{}\".format(bucket, prefix, key)\n",
+    "print(\"uploaded training data location: {}\".format(s3_train_data))\n",
     "\n",
-    "boto3.resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'test', key)).upload_file('test.csv', ExtraArgs={'ContentType': 'text/csv'})\n",
-    "s3_test_data = 's3://{}/{}/test/{}'.format(bucket, prefix, key)\n",
-    "print('uploaded testing data location: {}'.format(s3_test_data))"
+    "boto3.resource(\"s3\").Bucket(bucket).Object(\n",
+    "    os.path.join(prefix, \"test\", key)\n",
+    ").upload_file(\"test.csv\", ExtraArgs={\"ContentType\": \"text/csv\"})\n",
+    "s3_test_data = \"s3://{}/{}/test/{}\".format(bucket, prefix, key)\n",
+    "print(\"uploaded testing data location: {}\".format(s3_test_data))"
    ]
   },
   {
@@ -366,7 +377,7 @@
    "source": [
     "from sagemaker import image_uris\n",
     "\n",
-    "container = image_uris.retrieve('linear-learner', boto3.Session().region_name)\n",
+    "container = image_uris.retrieve(\"linear-learner\", boto3.Session().region_name)\n",
     "container"
    ]
   },
@@ -388,7 +399,7 @@
     "import sagemaker\n",
     "\n",
     "# Store the output in the S3 bucket\n",
-    "s3_output = 's3://{}/{}/output'.format(bucket, prefix)\n",
+    "s3_output = \"s3://{}/{}/output\".format(bucket, prefix)\n",
     "\n",
     "# Retrieve the notebooks role and use it for model training (has access to S3, SageMaker)\n",
     "role = sagemaker.get_execution_role()\n",
@@ -396,14 +407,15 @@
     "session = sagemaker.Session()\n",
     "\n",
     "# Use the Estimator interface to configure a training job\n",
-    "linear = sagemaker.estimator.Estimator(container,\n",
-    "                                       role, \n",
-    "                                       instance_count=1, \n",
-    "                                       instance_type='ml.m4.xlarge',\n",
-    "                                       output_path=s3_output,\n",
-    "                                       sagemaker_session=session,\n",
-    "                                       input_mode='Pipe' # stream training data from S3\n",
-    "                                       )"
+    "linear = sagemaker.estimator.Estimator(\n",
+    "    container,\n",
+    "    role,\n",
+    "    instance_count=1,\n",
+    "    instance_type=\"ml.m4.xlarge\",\n",
+    "    output_path=s3_output,\n",
+    "    sagemaker_session=session,\n",
+    "    input_mode=\"Pipe\",  # stream training data from S3\n",
+    ")"
    ]
   },
   {
@@ -421,8 +433,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linear.set_hyperparameters(feature_dim=len(train.columns) - 1, # minus 1 for the target\n",
-    "                           predictor_type='regressor')"
+    "linear.set_hyperparameters(\n",
+    "    feature_dim=len(train.columns) - 1,  # minus 1 for the target\n",
+    "    predictor_type=\"regressor\",\n",
+    ")"
    ]
   },
   {
@@ -443,12 +457,14 @@
     "import time\n",
     "\n",
     "# Set the content_type to text/csv (default is application/x-recordio-protobuf)\n",
-    "train_channel = sagemaker.session.TrainingInput(s3_train_data, content_type='text/csv')\n",
-    "test_channel = sagemaker.session.TrainingInput(s3_test_data, content_type='text/csv')\n",
+    "train_channel = sagemaker.session.TrainingInput(s3_train_data, content_type=\"text/csv\")\n",
+    "test_channel = sagemaker.session.TrainingInput(s3_test_data, content_type=\"text/csv\")\n",
     "\n",
     "name = f\"flight-delays-{int(time.time())}\"\n",
     "\n",
-    "linear.fit({'train': train_channel, 'test': test_channel}, job_name=name) # validation channel is also supported"
+    "linear.fit(\n",
+    "    {\"train\": train_channel, \"test\": test_channel}, job_name=name\n",
+    ")  # validation channel is also supported"
    ]
   },
   {
@@ -475,8 +491,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "linear_predictor = linear.deploy(initial_instance_count=1,\n",
-    "                                 instance_type='ml.t2.medium')"
+    "linear_predictor = linear.deploy(initial_instance_count=1, instance_type=\"ml.t2.medium\")"
    ]
   },
   {
@@ -514,13 +529,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_vector = test.iloc[0][1:] # use all but the first column (first column is actual delay)\n",
+    "test_vector = test.iloc[0][\n",
+    "    1:\n",
+    "]  # use all but the first column (first column is actual delay)\n",
     "actual_delay = test.iloc[0][0]\n",
     "\n",
     "response = linear_predictor.predict(test_vector)\n",
     "\n",
-    "predicted_delay = response['predictions'][0]['score']\n",
-    "print(f'Predicted {predicted_delay}, actual {actual_delay}, error {actual_delay-predicted_delay}')"
+    "predicted_delay = response[\"predictions\"][0][\"score\"]\n",
+    "print(\n",
+    "    f\"Predicted {predicted_delay}, actual {actual_delay}, error {actual_delay-predicted_delay}\"\n",
+    ")"
    ]
   },
   {
