fix: sagemaker-flight-delays

--- a/notebooks/sagemaker-flight-delays.ipynb
+++ b/notebooks/sagemaker-flight-delays.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Jupyter notebooks are divided into cells that can contain [markdown](https://daringfireball.net/projects/markdown/) or code that you can run interactively from the notebook interface. You can progress through the cells in the notebook by clicking the play button ![image.png](attachment:image.png) in the notebook tab's toolbar.\n",
+    "Jupyter notebooks are divided into cells that can contain [markdown](https://daringfireball.net/projects/markdown/) or code that you can run interactively from the notebook interface. You can progress through the cells in the notebook by clicking the play button in the notebook tab's toolbar.\n",
     "\n",
     "Click the play button to advance to the next cell and continue on in the lab whenever you have completed a cell.\n",
     "\n",
@@ -366,7 +366,7 @@
     "\n",
     "Now that the training data is available on S3 in a format that SageMaker can use, you are ready to train the model. You will use the [linear-learner algorithm](https://docs.aws.amazon.com/sagemaker/latest/dg/linear-learner.html) for training. The linear-learner algorithm can be used for regression or classification problems. It scales to large data sets and is sufficient for demonstrating the use of built-in SageMaker algorithms using Python.\n",
     "\n",
-    "SageMaker algorithms are available via container images. Each region that supports SageMaker has its own copy of the images. You will begin by retreiving the URI of the container image for the current session's region. "
+    "SageMaker algorithms are available via container images. Each region that supports SageMaker has its own copy of the images. You will begin by retrieving the URI of the container image for the current session's region. "
    ]
   },
   {
@@ -377,7 +377,9 @@
    "source": [
     "from sagemaker import image_uris\n",
     "\n",
-    "container = image_uris.retrieve(\"linear-learner\", boto3.Session().region_name)\n",
+    "region_name = \"ap-southeast-1\"\n",
+    "\n",
+    "container = image_uris.retrieve(\"linear-learner\", region_name)\n",
     "container"
    ]
   },
@@ -398,20 +400,20 @@
    "source": [
     "import sagemaker\n",
     "\n",
+    "session = sagemaker.Session(boto3.session.Session(region_name=region_name))\n",
+    "\n",
     "# Store the output in the S3 bucket\n",
     "s3_output = \"s3://{}/{}/output\".format(bucket, prefix)\n",
     "\n",
     "# Retrieve the notebooks role and use it for model training (has access to S3, SageMaker)\n",
-    "role = sagemaker.get_execution_role()\n",
-    "\n",
-    "session = sagemaker.Session()\n",
+    "role = sagemaker.get_execution_role(session)\n",
     "\n",
     "# Use the Estimator interface to configure a training job\n",
     "linear = sagemaker.estimator.Estimator(\n",
     "    container,\n",
     "    role,\n",
     "    instance_count=1,\n",
-    "    instance_type=\"ml.m4.xlarge\",\n",
+    "    instance_type=\"ml.g4dn.xlarge\",\n",
     "    output_path=s3_output,\n",
     "    sagemaker_session=session,\n",
     "    input_mode=\"Pipe\",  # stream training data from S3\n",
