--- a/notebooks/sagemaker-flight-delays.ipynb
+++ b/notebooks/sagemaker-flight-delays.ipynb
@@ -565,9 +565,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_amazonei_pytorch_latest_p37",
+   "name": "python3",
    "language": "python",
-   "name": "conda_amazonei_pytorch_latest_p37"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
