fix: openai-chat-completions-api

--- a/notebooks/openai-chat-completions-api.ipynb
+++ b/notebooks/openai-chat-completions-api.ipynb
@@ -52,6 +52,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install \"openai<1.0.0\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d2e28d2574cf5fe1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3967566a",
    "metadata": {
     "editable": true,
